<resources>
    <string name="app_name">Cervisia</string>
    <string name="buttonStartMA">Start</string>
    <string name="textViewHeaderLA">Library</string>
    <string name="imageButtonMenuLA">Menu</string>
    <string name="textViewHeaderRA">Rating</string>
    <string name="textViewNameRA">What is the name of your beverage?</string>
    <string name="textViewPriceRA">How much did the beverage cost?</string>
    <string name="editTextNameRA">Name</string>
    <string name="editTextPriceRA">Price</string>
    <string name="buttonCreateRA">Create New Rating</string>
    <string name="textViewHeaderMA">Menu</string>
    <string name="imageButtonBackMA">Back Button</string>
    <string name="textViewRatingMA2">Camera</string>
    <string name="textViewRatingRA">What would you rate this beverage from 1 to 10?</string>
    <string name="textViewBeverageNameLA">Name</string>
    <string name="textViewBeveragePriceLA">Price</string>
    <string name="buttonUpdateUA">Update Rating</string>
    <string name="buttonDeleteUA">Delete Rating</string>
    <string name="textViewRatingUA">Placeholder Rating</string>
    <string name="textViewPriceUA">Placeholder Price</string>
    <string name="textViewNameUA">Placeholder Name</string>
    <string name="buttonCreateCA">Create Picture</string>
    <string name="textViewBeverageTypeLA">Type</string>
</resources>