<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewBackgroundLA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#004200"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBarBeverageLA"
        app:layout_constraintEnd_toEndOf="@+id/textViewBeverageTypeLA"
        app:layout_constraintStart_toStartOf="@+id/textViewBeverageNameLA"
        app:layout_constraintTop_toTopOf="@+id/textViewBeveragePriceLA" />

    <TextView
        android:id="@+id/textViewBeverageNameLA"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/textViewBeverageNameLA"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewBeveragePriceLA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBeverageTypeLA"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/textViewBeverageTypeLA"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewBeveragePriceLA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBeveragePriceLA"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/textViewBeveragePriceLA"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewBeverageNameLA"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBarBeverageLA"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:numStars="10"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:progressTint="#BFBF00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBeverageNameLA" />

</androidx.constraintlayout.widget.ConstraintLayout>